--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndHireDetail.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/EndHireDetail.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="End Hire" Height="350" Width="500" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen">
+        Title="End Hire" Height="472" Width="500" SizeToContent="WidthAndHeight" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize">
     <Grid>
         <Button x:Name="btnNext"
                              
@@ -15,7 +15,7 @@
             FontSize="12"
             FontFamily="MonteSerrat"
             Cursor="Hand"
-            Click="btnSubmit_Click" Margin="262,280,-10,10">
+            Click="btnSubmit_Click" Margin="262,320,-10,-10">
             <Button.Style>
                 <Style TargetType="{x:Type Button}">
                     <Setter Property="Background" Value="#71A4E1"/>
@@ -46,7 +46,7 @@
             FontSize="12"
             FontFamily="MonteSerrat"
             Cursor="Hand"
-            Click="btnClear_Click" Margin="-9,280,261,10">
+            Click="btnClear_Click" Margin="-9,320,261,-10">
             <Button.Style>
                 <Style TargetType="{x:Type Button}">
                     <Setter Property="Background" Value="Red"/>
@@ -74,11 +74,11 @@
             Foreground="Black"
             FontWeight="ExtraBold"
             FontFamily="Century Gothic"
-        Margin="88,66,166,256"><Run Language="en-gb" Text="Hire ID"/></TextBlock>
+        Margin="90,69,164,371"><Run Language="en-gb" Text="Hire ID"/></TextBlock>
         <Border CornerRadius="15"  
             BorderBrush="Black" 
             BorderThickness="2" 
-        Margin="86,82,86,221"
+        Margin="86,82,86,337"
                     >
             <TextBox x:Name="HireIDtxt"
                 FontSize="15"
@@ -87,8 +87,7 @@
                 Foreground="Black"
                 CaretBrush="Gray"
                 BorderBrush="{x:Null}"
-                BorderThickness="0,0,0,1"
-                Margin="8,0,8,0" Height="31" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center"
+                BorderThickness="0,0,0,1" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" Height="37" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
                              />
 
 
@@ -100,24 +99,24 @@
             Foreground="Black"
             FontWeight="ExtraBold"
             FontFamily="Century Gothic"
-            Margin="88,134,166,189"><Run Language="en-gb" Text="Return Date"/></TextBlock>
+            Margin="90,135,164,305"><Run Language="en-gb" Text="Return Date"/></TextBlock>
         <Border CornerRadius="15"  
             BorderBrush="Black" 
             BorderThickness="2" 
-            Margin="86,150,86,154"
+            Margin="86,150,86,269"
                     >
-            <DatePicker x:Name="ReturnDate" Width="308" Background="{x:Null}" BorderBrush="{x:Null}" SelectedDateFormat="Short" FirstDayOfWeek="Monday" Foreground="Black" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Padding="8,3,1,0"/>
+            <DatePicker x:Name="ReturnDate" Width="308" Background="{x:Null}" BorderBrush="{x:Null}" SelectedDateFormat="Short" FirstDayOfWeek="Monday" Foreground="Black" VerticalContentAlignment="Stretch" HorizontalContentAlignment="Stretch" Padding="8,3,1,0" Height="26" Margin="0,0,8,0" VerticalAlignment="Center" HorizontalAlignment="Right"/>
         </Border>
         <TextBlock
             FontSize="10"
             Foreground="Black"
             FontWeight="ExtraBold"
             FontFamily="Century Gothic"
-            Margin="88,202,166,120"><Run Language="en-gb" Text="End Milage"/></TextBlock>
+            Margin="89,204,165,236"><Run Language="en-gb" Text="End Milage"/></TextBlock>
         <Border CornerRadius="15"  
             BorderBrush="Black" 
             BorderThickness="2" 
-            Margin="86,218,86,85"
+            Margin="86,218,86,202"
                     >
             <TextBox x:Name="EndMilatxt"
                 FontSize="15"
@@ -126,8 +125,7 @@
                 Foreground="Black"
                 CaretBrush="Gray"
                 BorderBrush="{x:Null}"
-                BorderThickness="0,0,0,1"
-                Margin="8,0,8,0" Height="31" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center"
+                BorderThickness="0,0,0,1" Height="36" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
                              />
 
 
@@ -140,7 +138,40 @@
             Foreground="#71A4E1"
             FontWeight="ExtraBold"
             FontFamily="Century Gothic"
-    Margin="140,19,114,297"><Run Language="en-gb" Text="Enter Details"/></TextBlock>
+    Margin="140,19,114,417"><Run Language="en-gb" Text="Enter Details"/></TextBlock>
+        <TextBlock
+            FontSize="10"
+            Foreground="Black"
+            FontWeight="ExtraBold"
+            FontFamily="Century Gothic"
+            Margin="92,270,162,156" RenderTransformOrigin="0.5,0.5">
+            <TextBlock.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleY="1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </TextBlock.RenderTransform><Run Language="en-gb" Text="Damage Fee"/></TextBlock>
+        <Border CornerRadius="15"  
+            BorderBrush="Black" 
+            BorderThickness="2" 
+            Margin="86,284,86,138"
+                    >
+            <TextBox x:Name="DFeeTxt"
+                FontSize="15"
+                FontWeight="Medium"
+                FontFamily="Montserrat"
+                Foreground="Black"
+                CaretBrush="Gray"
+                BorderBrush="{x:Null}"
+                BorderThickness="0,0,0,1" Height="34" Background="{x:Null}" SelectionBrush="{x:Null}" VerticalContentAlignment="Center" VerticalAlignment="Center" HorizontalAlignment="Center" Width="308"
+                             />
+
+
+
+
+        </Border>
 
     </Grid>
 </Window>
