--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Manage Employee.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/Manage Employee.xaml
@@ -1,30 +1,30 @@
-﻿<Window x:Name="RentalForm" x:Class="VehicleRentalSystem_V1._0.RentalForms"
+﻿<Window x:Class="VehicleRentalSystem_V1._0.Manage_Employee"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
-        Title="RentalForms" Height="700" Width="950"  WindowStartupLocation="CenterScreen">
+        Title="Manage_Employee" Height="700" Width="950"  WindowStartupLocation="CenterScreen">
 
     <ScrollViewer Margin="0,0,0,-6">
         <Border Height="627" Width="808" Background="#FFEEF6FF" BorderBrush="#FF1C6DD0" BorderThickness="3,3,3,3" CornerRadius="15,15,15,15">
             <Grid Height="587" VerticalAlignment="Top" Margin="0,26,0,0">
 
 
-                <TextBlock Text="Vehicle Rent Form"
+                <TextBlock Text="Manage Employee Form"
                     TextAlignment="Center"
                     FontSize="20"
                     Foreground="Black"
                     FontWeight="ExtraBold"
                     FontFamily="Montserrat"
-                    Margin="316,14,298,0" Height="23" VerticalAlignment="Top"/>
+                    Margin="264,14,262,0" Height="23" VerticalAlignment="Top"/>
 
-                <TextBlock Text="Customer Name"
+                <TextBlock Text="Employee Name"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
                     FontFamily="Montserrat"
-                    Margin="51,89,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100"/>
+                    Margin="51,88,0,0" Height="20" VerticalAlignment="Top" HorizontalAlignment="Left" Width="100"/>
 
                 <Border CornerRadius="15"  
                     BorderBrush="Black" 
@@ -33,7 +33,7 @@
                     Width="350"
                     Margin="41,103,0,0" Height="44" VerticalAlignment="Top" Grid.Column="1" Background="White"
                     >
-                    <TextBox x:Name="txtC_Name"
+                    <TextBox x:Name="txtE_Name"
                         FontSize="15"
                         TextAlignment="Left"
                         FontWeight="Medium"
@@ -54,11 +54,11 @@
 
                 <!--Next-->
 
-                <TextBlock Text="Customer NIC"
+                <TextBlock Text="Employee NIC"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
                     FontFamily="Montserrat"
-                    Margin="529,88,0,0" HorizontalAlignment="Left" Width="93" Height="21" VerticalAlignment="Top"/>
+                    Margin="529,86,0,0" HorizontalAlignment="Left" Width="93" Height="21" VerticalAlignment="Top"/>
 
                 <Border CornerRadius="15"  
                     BorderBrush="Black" 
@@ -67,7 +67,7 @@
                     Width="250"
                     Margin="515,103,0,0" Height="44" VerticalAlignment="Top" Background="White"
                     >
-                    <TextBox x:Name="txtC_NIC"
+                    <TextBox x:Name="txtE_NIC"
                         FontSize="15"
                         FontWeight="Medium"
                         FontFamily="Century Gothic"
@@ -86,7 +86,7 @@
 
                 <!--Next-->
 
-                <TextBlock Text="Customer Telephone"
+                <TextBlock Text="Employee Telephone"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
                     FontFamily="Montserrat"
@@ -99,7 +99,7 @@
                     Width="250"
                     Margin="41,183,0,0" Height="44" VerticalAlignment="Top" Grid.Column="1" Background="White"
                     >
-                    <TextBox x:Name="txtC_Telephone"
+                    <TextBox x:Name="txtE_Telephone"
                         FontSize="15"
                         FontWeight="Medium"
                         FontFamily="Century Gothic"
@@ -118,11 +118,11 @@
 
                 <!--Next-->
 
-                <TextBlock Text="Customer Email"
+                <TextBlock Text="Employee Email"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
                     FontFamily="Montserrat"
-                    Margin="529,168,0,0" HorizontalAlignment="Left" Width="93" RenderTransformOrigin="0.724,0.402" Height="18" VerticalAlignment="Top"/>
+                    Margin="529,166,0,0" HorizontalAlignment="Left" Width="93" RenderTransformOrigin="0.724,0.402" Height="18" VerticalAlignment="Top"/>
 
                 <Border CornerRadius="15"  
                     BorderBrush="Black" 
@@ -131,7 +131,7 @@
                     Width="250"
                     Margin="515,183,0,0" Height="44" VerticalAlignment="Top" Background="White"
                     >
-                    <TextBox x:Name="txtC_Email"
+                    <TextBox x:Name="txtE_Email"
                         FontSize="15"
                         FontWeight="Medium"
                         FontFamily="Century Gothic"
@@ -148,11 +148,11 @@
 
                 </Border>
 
-                <TextBlock Text="Customer Address"
+                <TextBlock Text="Employee Address"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
                     FontFamily="Montserrat"
-                    Margin="51,255,0,0" HorizontalAlignment="Left" Width="115" Height="26" VerticalAlignment="Top"/>
+                    Margin="51,252,0,0" HorizontalAlignment="Left" Width="115" Height="26" VerticalAlignment="Top"/>
 
                 <Border CornerRadius="15"  
                     BorderBrush="Black" 
@@ -161,7 +161,7 @@
                     Width="350"
                     Margin="41,270,0,0" Height="44" VerticalAlignment="Top" Grid.Column="1" Background="White"
                     >
-                    <TextBox x:Name="C_address"
+                    <TextBox x:Name="E_address"
                         FontSize="15"
                         TextAlignment="Left"
                         FontWeight="Medium"
@@ -180,134 +180,45 @@
                 </Border>
 
 
-
                 <!--Next-->
-
-                <TextBlock Text="Vehicle Chassis Number"
+                <TextBlock Text="Employee Department"
                     Foreground="#FF1C6DD0"
                     FontWeight="Bold"
                     FontFamily="Montserrat"
-                    Margin="55,427,0,0" HorizontalAlignment="Left" Width="151" Height="19" VerticalAlignment="Top"/>
-
+                    Margin="525,248,0,0" HorizontalAlignment="Left" Width="152" Height="20" VerticalAlignment="Top" RenderTransformOrigin="0.493,1.222"/>
                 <Border CornerRadius="15"  
                     BorderBrush="Black" 
                     BorderThickness="2" 
                     HorizontalAlignment="Left" 
                     Width="250"
-                    Margin="41,442,0,0" Height="44" VerticalAlignment="Top" Background="White"
-                    >
-                    <TextBox x:Name="V_Chassis"
-                        FontSize="15"
-                        FontWeight="Medium"
-                        FontFamily="Century Gothic"
-                        TextAlignment="Left"
-                        Foreground="Black"
-                        CaretBrush="Gray"
-                        BorderBrush="White"
-                        BorderThickness="0,0,0,1"
-                        Margin="8,8,8,8"
-                             />
-
-
-
-
-                </Border>
-
-                <!--Next-->
-                <TextBlock Text="Package"
-                    Foreground="#FF1C6DD0"
-                    FontWeight="Bold"
-                    FontFamily="Montserrat"
-                    Margin="525,249,0,0" HorizontalAlignment="Left" Width="84" Height="20" VerticalAlignment="Top" RenderTransformOrigin="0.493,1.222"/>
-                <Border CornerRadius="15"  
-                    BorderBrush="Black" 
-                    BorderThickness="2" 
-                    HorizontalAlignment="Left" 
-                    Width="250"
-                    Margin="515,265,0,0" Height="48" VerticalAlignment="Top" Background="White"
+                    Margin="515,266,0,0" Height="48" VerticalAlignment="Top" Background="White"
                     >
                     <ComboBox 
                     
                         Margin="0,8,0,8" BorderBrush="#FF7AB3EF" BorderThickness="1,1,1,1" IsReadOnly="True"  HorizontalAlignment="Center" Width="230" VerticalContentAlignment="Center" Background="#FFEEF6FF">
-                        <ComboBoxItem x:Name="DailyCar" Content="Car - 1 Day" IsSelected="True" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="WeeklyCar" Content="Car - 1 Week" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="MonthlyCar" Content="Car - 1 Month" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="AnnualyCar" Content="Car - 1 Year" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="DailyVan" Content="Van - 1 Day" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="WeeklyVan" Content="Van - 1 Week" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="MonthlyVan" Content="Van - 1 Month" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="AnnualyVan" Content="Van - 1 Year" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="DailySUV" Content="SUV - 1 Day" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="WeeklySUV" Content="SUV - 1 Week" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="MonthlySUV" Content="SUV - 1 Month" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
-                        <ComboBoxItem x:Name="AnnualySUV" Content="SUV - 1 Year" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
+                        <ComboBoxItem x:Name="IT" Content="IT" IsSelected="True" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
+                        <ComboBoxItem x:Name="Legal" Content="Legal" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
+                        <ComboBoxItem x:Name="Reception" Content="Reception" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
+                        <ComboBoxItem x:Name="Maintenance" Content="Maintenance" Background="#FFEEF6FF" BorderBrush="#FF7AB3EF"/>
 
                     </ComboBox>
                 </Border>
 
+                <!--Next-->
+                <DataGrid Margin="102,356,102,108" d:ItemsSource="{d:SampleData ItemCount=5}"/>
 
                 <!--Next-->
-                <TextBlock Text="Start Date"
-                    Foreground="#FF1C6DD0"
-                    FontWeight="Bold"
-                    FontFamily="Montserrat"
-                    Margin="51,339,0,0" HorizontalAlignment="Left" Width="58" Height="17" VerticalAlignment="Top"/>
-
-                <Border CornerRadius="15"  
-                    BorderBrush="Black" 
-                    BorderThickness="2" 
-                    HorizontalAlignment="Left" 
-                    Width="250"
-                    Margin="41,355,0,0" Height="48" VerticalAlignment="Top" Background="White"
-                    >
-                    <DatePicker x:Name="Startdate" HorizontalAlignment="Left" 
-                        Height="25"
-                        Margin="8,8,8,8"
-                        VerticalAlignment="Top" 
-                        Width="230" BorderBrush="{x:Null}"/>
-
-
-
-
-                </Border>
-                <!--Next-->
-                <TextBlock Text="End Date"
-                    Foreground="#FF1C6DD0"
-                    FontWeight="Bold"
-                    FontFamily="Montserrat"
-                    Margin="529,340,0,0" HorizontalAlignment="Left" Width="64" Height="18" VerticalAlignment="Top" RenderTransformOrigin="0.804,0.608"/>
-
-                <Border CornerRadius="15"  
-                    BorderBrush="Black" 
-                    BorderThickness="2" 
-                    HorizontalAlignment="Left" 
-                    Width="250"
-                    Margin="515,355,0,0" Height="48" VerticalAlignment="Top" Background="White"
-                    >
-                    <DatePicker x:Name="Enddate" HorizontalAlignment="Left" 
-                        Height="25"
-                        Margin="8,8,8,8"
-                        VerticalAlignment="Top" 
-                        Width="230" BorderBrush="{x:Null}"/>
-
-
-
-
-                </Border>
-                <!--Next-->
-
-
-                <Button x:Name="btnSubmit"
+                <Button x:Name="btnUpdate"
                              
                     BorderThickness="0"
-                    Content="Submit"
+                    Content="Update"
                     Foreground="Black"
                     FontSize="12"
                     FontFamily="MonteSerrat"
                     FontWeight="SemiBold"
                     Cursor="Hand"
-                    Margin="190,524,447,0"
-                    Click="btnSubmit_Click" RenderTransformOrigin="0.213,0.531" Height="47" VerticalAlignment="Top" >
+                    Margin="214,524,424,0"
+                    Click="btnSubmit_Click" RenderTransformOrigin="0.213,0.531" Height="47" VerticalAlignment="Top" Background="Turquoise" >
                     <Button.Style>
                         <Style TargetType="{x:Type Button}">
                             <Setter Property="Background" Value="#FF7AB3EF"/>
@@ -318,7 +229,6 @@
                             </Style.Triggers>
                         </Style>
                     </Button.Style>
-                    
 
                     <Button.Template>
                         <ControlTemplate TargetType="{x:Type Button}">
@@ -331,16 +241,18 @@
                         </ControlTemplate>
                     </Button.Template>
                 </Button>
-                <Button x:Name="btnClear"
+
+                <!--Next-->
+                <Button x:Name="btnDelete"
                              
                     BorderThickness="0"
-                    Content="Clear"
+                    Content="Delete"
                     Foreground="White"
                     FontSize="12"
                     FontFamily="MonteSerrat"
                     FontWeight="SemiBold"
                     Cursor="Hand"
-                    Margin="416,522,190,0"
+                    Margin="392,522,214,0"
                     Click="btnClear_Click" Height="50" VerticalAlignment="Top">
                     <Button.Style>
                         <Style TargetType="{x:Type Button}">
@@ -348,6 +260,77 @@
                             <Style.Triggers>
                                 <Trigger Property="IsMouseOver" Value="True">
                                     <Setter Property="Background" Value="Orange"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Width="150" Height="40"
+                                CornerRadius="20"
+                                Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+
+
+                <!--Next-->
+                <Button x:Name="Load"
+                             
+                    BorderThickness="0"
+                    Content="Load"
+                    Foreground="White"
+                    FontSize="12"
+                    FontFamily="MonteSerrat"
+                    FontWeight="SemiBold"
+                    Cursor="Hand"
+                    Margin="614,524,24,0"
+                    Click="btnSubmit_Click" RenderTransformOrigin="0.213,0.531" Height="47" VerticalAlignment="Top" >
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Background" Value="#FF1C6DD0"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#FF7AB3EF"/>
+                                </Trigger>
+                            </Style.Triggers>
+                        </Style>
+                    </Button.Style>
+
+                    <Button.Template>
+                        <ControlTemplate TargetType="{x:Type Button}">
+                            <Border Width="150" Height="40"
+                                CornerRadius="20"
+                                Background="{TemplateBinding Background}">
+                                <ContentPresenter VerticalAlignment="Center"
+                                    HorizontalAlignment="Center"/>
+                            </Border>
+                        </ControlTemplate>
+                    </Button.Template>
+                </Button>
+
+                <!--Next-->
+                <Button x:Name="btnInsert"
+                             
+                    BorderThickness="0"
+                    Content="Insert"
+                    Foreground="Black"
+                    FontSize="12"
+                    FontFamily="MonteSerrat"
+                    FontWeight="SemiBold"
+                    Cursor="Hand"
+                    Margin="20,524,616,0"
+                    Click="btnSubmit_Click" RenderTransformOrigin="0.213,0.531" Height="47" VerticalAlignment="Top" >
+                    <Button.Style>
+                        <Style TargetType="{x:Type Button}">
+                            <Setter Property="Background" Value="#FF7AB3EF"/>
+                            <Style.Triggers>
+                                <Trigger Property="IsMouseOver" Value="True">
+                                    <Setter Property="Background" Value="#FF1C6DD0"/>
                                 </Trigger>
                             </Style.Triggers>
                         </Style>
