--- a/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/RentPackagesFrom.xaml
+++ b/VehicleRentalSystem V1.0/VehicleRentalSystem V1.0/RentPackagesFrom.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:VehicleRentalSystem_V1._0"
         mc:Ignorable="d"
         Title="Rent_packages" Height="700" Width="900">
-    <Border Margin="108,60,91,38" BorderBrush="#FF1C6DD0" BorderThickness="3,3,3,3" CornerRadius="15,15,15,15" Background="#FFEEF6FF">
+    <Border Margin="92,60,91,38" BorderBrush="#FF1C6DD0" BorderThickness="3,3,3,3" CornerRadius="15,15,15,15" Background="#FFEEF6FF">
         <Grid Height="558" VerticalAlignment="Bottom" HorizontalAlignment="Left" Width="654" Margin="27,0,0,0">
             <TextBlock Text="Manage Rent Pacakges Form"
                 TextAlignment="Center"
@@ -30,7 +30,7 @@
                 Width="475"
                 Margin="23,80,0,0" Background="White" Height="42" VerticalAlignment="Top"
                     >
-                <TextBox x:Name="txtD_PackageName"
+                <TextBox x:Name="txtD_PackageName1"
                     FontSize="15"
                     TextAlignment="Left"
                     FontWeight="Medium"
@@ -59,7 +59,7 @@
                 Width="273"
                 Margin="23,163,0,0" Height="42" VerticalAlignment="Top" Background="White"
                     >
-                <TextBox x:Name="txtD_PackageID"
+                <TextBox x:Name="txtD_PackageID1"
                     FontSize="15"
                     FontWeight="Medium"
                     FontFamily="Century Gothic"
@@ -89,7 +89,7 @@
                 Width="273"
                 Margin="335,162,0,0" Height="42" VerticalAlignment="Top" Background="White"
                     >
-                <TextBox x:Name="txtD_Duration"
+                <TextBox x:Name="txtD_Duration1"
                     FontSize="15"
                     FontWeight="Medium"
                     FontFamily="Century Gothic"
@@ -119,7 +119,7 @@
                 Width="273"
                 Margin="23,244,0,0" Background="White" Height="42" VerticalAlignment="Top"
                     >
-                <TextBox x:Name="txtD_Rental"
+                <TextBox x:Name="txtD_Rental1"
                     FontSize="15"
                     FontWeight="Medium"
                     FontFamily="Century Gothic"
@@ -149,7 +149,7 @@
                 Width="273"
                 Margin="335,245,0,0" Height="42" VerticalAlignment="Top" Background="White"
                     >
-                <TextBox x:Name="txtD_PenaltyRate"
+                <TextBox x:Name="txtD_PenaltyRate1"
                     FontSize="15"
                     FontWeight="Medium"
                     FontFamily="Century Gothic"
@@ -165,7 +165,139 @@
 
 
             </Border>
-            <DataGrid x:Name="RentPackagesTable" Margin="35,316,0,0" d:ItemsSource="{d:SampleData ItemCount=5}" Height="140" VerticalAlignment="Top" HorizontalAlignment="Left" Width="572" BorderBrush="#FF1C6DD0" Background="#FFEEF6FF"/>
+            <DataGrid x:Name="RentPackagesTable1" Margin="35,316,0,0" d:ItemsSource="{d:SampleData ItemCount=5}" Height="140" VerticalAlignment="Top" HorizontalAlignment="Left" Width="572" BorderBrush="#FF7AB3EF" Background="#FFEEF6FF"/>
+            <Button x:Name="btnInsert1"
+                             
+                BorderThickness="0"
+                Content="Insert"
+                Foreground="Black"
+                FontSize="12"
+                FontFamily="MonteSerrat"
+                FontWeight="SemiBold"
+                Cursor="Hand"
+                Margin="-2,481,490,0"
+                Click="btnSubmit_Click" RenderTransformOrigin="0.213,0.531" Height="47" VerticalAlignment="Top" >
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Background" Value="#FF7AB3EF"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FF1C6DD0"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Width="150" Height="40"
+                            CornerRadius="20"
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+            <Button x:Name="btnUpdate1"
+                             
+                BorderThickness="0"
+                Content="Update"
+                Foreground="Black"
+                FontSize="12"
+                FontFamily="MonteSerrat"
+                FontWeight="SemiBold"
+                Cursor="Hand"
+                Margin="162,481,328,0"
+                Click="btnSubmit_Click" RenderTransformOrigin="0.213,0.531" Height="47" VerticalAlignment="Top" Background="Turquoise" >
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Background" Value="#FF7AB3EF"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FF1C6DD0"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Width="150" Height="40"
+                            CornerRadius="20"
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+            <Button x:Name="btnDelete1"
+                             
+                BorderThickness="0"
+                Content="Delete"
+                Foreground="White"
+                FontSize="12"
+                FontFamily="MonteSerrat"
+                FontWeight="SemiBold"
+                Cursor="Hand"
+                Margin="308,480,150,0"
+                Click="btnClear_Click" Height="50" VerticalAlignment="Top">
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Background" Value="Red"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="Orange"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Width="150" Height="40"
+                            CornerRadius="20"
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
+            <Button x:Name="Load1"
+                             
+                BorderThickness="0"
+                Content="Load"
+                Foreground="White"
+                FontSize="12"
+                FontFamily="MonteSerrat"
+                FontWeight="SemiBold"
+                Cursor="Hand"
+                Margin="482,481,8,0"
+                Click="btnSubmit_Click" RenderTransformOrigin="0.213,0.531" Height="47" VerticalAlignment="Top" >
+                <Button.Style>
+                    <Style TargetType="{x:Type Button}">
+                        <Setter Property="Background" Value="#FF1C6DD0"/>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#FF7AB3EF"/>
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </Button.Style>
+
+                <Button.Template>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Width="150" Height="40"
+                            CornerRadius="20"
+                            Background="{TemplateBinding Background}">
+                            <ContentPresenter VerticalAlignment="Center"
+                                HorizontalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Button.Template>
+            </Button>
 
         </Grid>
     </Border>
